...
                            formatter.dateFormat = dateStringFormat
                            dateText = formatter.string(from: newValue)
                        }
                    }
                }
                .navigationBarItems(
                    trailing: Button("Done") { isPresented = false }
                )
            }
            .presentationDetents([.height(sheetHeight)])
        }
    }
    
...
